--- a/Gender_Based_Real_Time_Emotion_Detector.ipynb
+++ b/Gender_Based_Real_Time_Emotion_Detector.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "29a3ac86-6f6a-4ad3-8eb4-2e0956ae0ef6",
    "metadata": {},
    "outputs": [],
@@ -298,7 +298,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
+   "id": "1dd93016-d0c8-460a-a6e4-48b6a85504a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ed = emotion_detector('Models/G_SER.hdf5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "d6cf6574-1d1c-4843-975b-d58047b91341",
    "metadata": {
     "scrolled": true,
@@ -336,11 +346,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-07-31 06:21:28.214032: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:113] Plugin optimizer for device_type GPU is enabled.\n",
-      "2022-07-31 06:21:28.347838: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:113] Plugin optimizer for device_type GPU is enabled.\n",
-      "2022-07-31 06:21:28.644735: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:113] Plugin optimizer for device_type GPU is enabled.\n",
-      "2022-07-31 06:21:28.928801: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:113] Plugin optimizer for device_type GPU is enabled.\n",
-      "2022-07-31 06:21:29.223720: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:113] Plugin optimizer for device_type GPU is enabled.\n"
+      "2022-07-31 13:01:57.388233: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:113] Plugin optimizer for device_type GPU is enabled.\n",
+      "2022-07-31 13:01:57.521640: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:113] Plugin optimizer for device_type GPU is enabled.\n",
+      "2022-07-31 13:01:57.794856: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:113] Plugin optimizer for device_type GPU is enabled.\n",
+      "2022-07-31 13:01:58.067459: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:113] Plugin optimizer for device_type GPU is enabled.\n",
+      "2022-07-31 13:01:58.343040: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:113] Plugin optimizer for device_type GPU is enabled.\n"
      ]
     },
     {
@@ -353,7 +363,6 @@
     }
    ],
    "source": [
-    "ed = emotion_detector('Models/G_SER.hdf5')\n",
     "device_index = ed.list_devices()\n",
     "ed.start_stream(device_index=device_index)"
    ]
@@ -385,16 +394,6 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1, 2, figsize=(14, 8))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "a2d88085-558e-4d03-80fd-bf7e760358b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ed = emotion_detector('Models/SER.hdf5')"
    ]
   },
   {
