--- a/Real_Time_Gender_Classifier_By_Voice.ipynb
+++ b/Real_Time_Gender_Classifier_By_Voice.ipynb
@@ -40,14 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "29a3ac86-6f6a-4ad3-8eb4-2e0956ae0ef6",
    "metadata": {},
    "outputs": [],
    "source": [
     "class emotion_detector:\n",
     "    # ['angry', 'calm', 'disgust', 'fear', 'happy', 'sad', 'surprise']\n",
-    "    def __init__(self, model_path, sample_rate=22050, threshold=124):\n",
+    "    def __init__(self, model_path, sample_rate=22050, threshold=122):\n",
     "        self.MODEL = load_model(model_path)\n",
     "        self.genders = {0: 'Female', 1: 'Male'}\n",
     "        self.THRESHOLD = threshold\n",
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "d6cf6574-1d1c-4843-975b-d58047b91341",
    "metadata": {
     "scrolled": true,
@@ -281,7 +281,8 @@
      "text": [
       "----------------------record device list---------------------\n",
       "Input Device id  0  -  MacBook Pro Microphone\n",
-      "Input Device id  2  -  Microsoft Teams Audio\n",
+      "Input Device id  2  -  Kishan’s AirPods Pro 🦁\n",
+      "Input Device id  4  -  Microsoft Teams Audio\n",
       "-------------------------------------------------------------\n"
      ]
     },
@@ -289,7 +290,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " 0\n"
+      " 2\n"
      ]
     },
     {
@@ -297,15 +298,16 @@
      "output_type": "stream",
      "text": [
       "Stream Started !\n",
-      "recording via index 0\n",
-      "13\n"
+      "recording via index 2\n",
+      "13\n",
+      "67.68107604980469\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Exception ignored in: <function WeakMethod.__new__.<locals>._cb at 0x2c9d1b430>\n",
+      "Exception ignored in: <function WeakMethod.__new__.<locals>._cb at 0x17fabe820>\n",
       "Traceback (most recent call last):\n",
       "  File \"/Users/kishan/opt/miniforge3/lib/python3.9/weakref.py\", line 58, in _cb\n",
       "    if self._alive:\n",
@@ -316,9 +318,96 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "123.62779235839844\n",
-      "122.89764404296875\n",
-      "123.54275512695312\n",
+      "123.36097717285156\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-08-03 20:46:02.768512: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:113] Plugin optimizer for device_type GPU is enabled.\n",
+      "2022-08-03 20:46:02.838977: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:113] Plugin optimizer for device_type GPU is enabled.\n",
+      "2022-08-03 20:46:03.188466: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:113] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4.503583e-05]]\n",
+      "0\n",
+      "123.63334655761719\n",
+      "[[3.936874e-05]]\n",
+      "0\n",
+      "123.60038757324219\n",
+      "[[3.5700294e-05]]\n",
+      "0\n",
+      "124.08818054199219\n",
+      "[[0.9999902]]\n",
+      "1\n",
+      "123.91012573242188\n",
+      "[[0.99999297]]\n",
+      "1\n",
+      "123.651123046875\n",
+      "[[0.99998736]]\n",
+      "1\n",
+      "123.93876647949219\n",
+      "[[7.356672e-05]]\n",
+      "0\n",
+      "124.43962097167969\n",
+      "[[5.1164145e-05]]\n",
+      "0\n",
+      "124.26443481445312\n",
+      "[[0.9999788]]\n",
+      "1\n",
+      "123.59437561035156\n",
+      "[[4.0985557e-05]]\n",
+      "0\n",
+      "123.82223510742188\n",
+      "[[6.8277586e-05]]\n",
+      "0\n",
+      "124.0076904296875\n",
+      "[[0.99999166]]\n",
+      "1\n",
+      "124.01226806640625\n",
+      "[[0.99998856]]\n",
+      "1\n",
+      "124.09262084960938\n",
+      "[[0.99999154]]\n",
+      "1\n",
+      "124.28144836425781\n",
+      "[[0.9999815]]\n",
+      "1\n",
+      "123.86201477050781\n",
+      "[[0.99999416]]\n",
+      "1\n",
+      "123.89878845214844\n",
+      "[[0.99999]]\n",
+      "1\n",
+      "124.01156616210938\n",
+      "[[0.9999807]]\n",
+      "1\n",
+      "125.19181823730469\n",
+      "[[0.00137052]]\n",
+      "0\n",
+      "124.42427062988281\n",
+      "[[4.2331376e-05]]\n",
+      "0\n",
+      "124.76402282714844\n",
+      "[[0.9999869]]\n",
+      "1\n",
+      "125.18119812011719\n",
+      "[[0.9999747]]\n",
+      "1\n",
+      "124.34933471679688\n",
+      "[[0.9999881]]\n",
+      "1\n",
+      "123.77301025390625\n",
+      "[[0.00011504]]\n",
+      "0\n",
+      "124.24180603027344\n",
+      "[[0.99998915]]\n",
+      "1\n",
       "Main Thread Terminated !\n",
       "Stream Stoped !\n"
      ]
